<resources>
    <string name="app_name">Life Goals RPG</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="action_quest_log">Quest Log</string>
    <string name="action_guild">Guild</string>
    <string name="action_other">Other</string>
    <string name="action_options">Options</string>
    <string name="title_activity_add_quest">AddQuestActivity</string>
    <string name="error_login">Could not login</string>
    <string name="error_add_quest">Could not add quest</string>
    <string name="filter">Filter</string>
    <string name="action_filter">Filter</string>
    <string name="action_add_location">Add Location</string>
    <string name="quest_name">Name Quest</string>
    <string name="quest_description">Description</string>
    <string name="quest_goal">Goal</string>
    <string name="action_remove_location">Remove location</string>
    <string name="geofence_transition_invalid_type">Invalid geofence type %d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_navigate">Take me there!</string>
    <string name="dialog_permission_account_title">Missing permission</string>
    <string name="dialog_permission_account_message">This app requires the accounts permission to function. Please enable it to continue using this app.</string>
</resources>
