<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_add_quest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="questionablequality.rpglifeapp.AddQuestActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/TxtQuestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/quest_name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/TxtQuestDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/quest_description"
                android:inputType="textPersonName"/>

            <Spinner
                android:id="@+id/QuestType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/TxtSetGoalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/quest_goal"
                android:inputType="number"/>

            <Button
                android:id="@+id/btn_add_location"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_add_location"/>

            <Button
                android:id="@+id/btn_remove_location"
                style="@style/DefaultButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/action_remove_location"/>

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/QuestAddBackButton"
                style="@style/BackButton"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/AddQuestButton"
                style="@style/DefaultButton"
                android:layout_weight="1"
                android:text="Add Quest"/>

        </LinearLayout>

    </LinearLayout>
</layout>