<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="questionablequality.rpglifeapp.data.User"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/pb_load"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

            <ImageView
                android:id="@+id/ImgCharacter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@android:color/background_light"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/main_menu_scroll">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/MainMenuTextStats"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:text="@{user.info}"
                        style="@style/TextAppearance.AppCompat.Medium"/>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <Button
            android:id="@+id/btn_quest_log"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/action_quest_log"/>

        <Button
            android:id="@+id/btn_guild"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/action_guild"/>

        <Button
            android:id="@+id/btn_other"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_purple"
            android:text="@string/action_other"/>

        <Button
            android:id="@+id/btn_options"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/action_options"/>

    </LinearLayout>
</layout>